--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ h1 {
 p {
   padding: 30px 50px;
 }
-#side-bar {
+.side-bar {
   position: absolute;
   width: 230px;
   height: 100%;
@@ -30,6 +30,9 @@ p {
   left: -230px;
   transition: 0.5s ease-out;
   z-index: 4;
+}
+.inject {
+  left: 0;
 }
 .toggle-btn {
   position: absolute;
